Fix Response JSON Structure and Add 400 to Http Codes - 'swag fmt' & 'swag init'
