# docs/swagger.json
@@ -61,10 +61,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/dto.DelegationResponse"
-                            }
+                            "$ref": "#/definitions/dto.DataDelegationSliceResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errorhandling.SimpleErrorMessage"
                         }
                     },
                     "500": {
@@ -78,6 +81,17 @@
         }
     },
     "definitions": {
+        "dto.DataDelegationSliceResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.DelegationResponse"
+                    }
+                }
+            }
+        },
         "dto.DelegationResponse": {
             "type": "object",
             "properties": {
